# the-anime-bot-bot

./: .gitignore  .gitmodules  README.md  bottom.py  main.py  pyproject.toml  requirements.txt  socket.csv  webserver.py
.github/workflows/: codeql-analysis.yml
cogs/: animes.py  chat.py  commandsusage.py  cooldown.py  currency.py  error_sender.py  events.py  fun.py  game.txt  help.p  help.py  help.txt  hmm.py  ipc.py  jishaku.py  logger.py  moderations.py  music.p  music.py  others.py  owner.py  pictures.py  piggo.py  reactionrole.py  slash.py  socket.py  unnie_chan.py  utility.py  web.py
cse/: result.py
currency_converter/: currency_converter.py
discord/: __main__.py  abc.py  activity.py  client.py  gateway.py  guild.py  http.py  iterators.py  member.py  opus.py  player.py  shard.py  state.py  template.py  user.py  utils.py  voice_client.py  webhook.py
discord/ext/commands/: bot.py  converter.py  core.py
discord_slash/: client.py  context.py
discord_slash/utils/: manage_commands.py
flags/: _command.py  _parser.py
ipc/: __init__.py  client.py  server.py
jishaku/: exception_handling.py  paginators.py
jishaku/features/: management.py  python.py  root_command.py
menus/menus/: __init__.py
utils/: HelpPaginator.py  asyncstuff.py  embed.py  format.py  fuzzy.py  paginator.py  subclasses.py  utils.py
