[tool.poetry]
name = "the-anime-bot-bot-1"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
asyncpg = "^0.22.0"
cryptography = "^3.4.6"
youtube-dl = "^2021.2.22"
discord = "^1.0.1"
uvloop = "^0.15.2"
bs4 = "^0.0.1"
import-expression = "^1.1.4"
gtts = "^2.2.2"
replit = "^2.0.0"
pyfiglet = "^0.8.post1"
aioredis = "^1.3.1"
translate = "^3.5.0"
async-timeout = "^3.0.1"
braceexpand = "^0.1.6"
bottom = "^2.2.0"
humanize = "^3.2.0"
lyricsgenius = "^3.0.0"
aiohttp = "^3.7.3"
psutil = "^5.8.0"
pyqrcode = "^1.2.1"
opencv-python = "^4.5.1"
selenium = "^3.141.0"
"vacefron.py" = "^1.6.1"
"mystbin.py" = "^1.0.1"
asyncdagpi = "^3.2.2"
"alexflipnote.py" = "^2.3.0"
aiozaneapi = "^1.6"
eight-ball = "^3.0.3"
twemoji-parser = "^0.4.3"
polaroid = "^0.2.10"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
